# celery-saga

./: .gitignore  CLAUDE.md  EXAMPLE.md  LICENSE  README.md  pyproject.toml
celery_saga/: __init__.py  core.py  executor.py  result.py  state.py  step.py
celery_saga/backends/: __init__.py  base.py  memory.py  redis.py
docs/: examples.md  guide.md  quickstart.md
examples/: 01_builder_api.py  02_functional_api.py  03_parallel.py  04_child_saga.py  05_permanent_failure.py  README.md  _setup.py
tests/: test_saga.py
